--- a/less/team.less
+++ b/less/team.less
@@ -5,6 +5,15 @@
     text-align: center;
     & h2 {
       margin-bottom: 15px;
+        @media @desktop {
+          font-size: @font-size-big-responsive;
+        }
+        @media @tablet {
+          font-size: @font-size-big-responsive;
+        }
+        @media @mobile {
+          font-size: @font-size-big-responsive;
+        }
     }
   }
 
