--- a/less/variables.less
+++ b/less/variables.less
@@ -6,6 +6,7 @@
 
 // Colors - Black and White Testing
 @white: #ffffff;
+@light-grey: #eee;
 @dark-grey: #444444;
 @gray: #6f6f6f;
 @black: #212529;
@@ -14,18 +15,25 @@
 @primary: #2ec4b6;
 @secondary: #586ba4;
 @danger: #ff6b6b;
-@cream: #f7fff7;
 
-// Font sizes
+// Font sizes - Desktop Viewport
 @font-size-big: 6.5rem;
-@font-size-big-tablet: 4.8rem;
-@font-size-medium: 3.2rem;
-@font-size-normal: 1.8rem;
+@font-size-normal: 1.6rem;
+
+// Font sizes - Readable Content
+@font-size-content: 1.8rem;
+@line-height-content: 1.5;
+
+// Font sizes - Tablet & Mobile Viewport
+@font-size-big-responsive: 4.8rem;
 
 // Content assignments
 @font-color-content: @black;
 @bg-main: @white;
 @bg-footer: @primary;
+
+// Border assignments
+@border-section: @light-grey;
 
 // CTA button assignments
 @font-color-button: @white;
